# dadaword

./: .gitignore  CMakeLists.txt  Dadaword.pro  INSTALL.txt  README.md  autoload.cpp  autoload.h  changelog.txt  constantes.h  dadaword.cpp  dadaword.h  dadaword_es.qm  dadaword_es.ts  ddz.cpp  ddz.h  erreur.cpp  erreur.h  errorManager.cpp  errorManager.h  fen_puces.cpp  fen_puces.h  highlighter.cpp  highlighter.h  highlighterhtml.cpp  highlighterhtml.h  images.qrc  liste_dicos.txt  main.cpp  opendocument.cpp  opendocument.h  orthManager.cpp  orthManager.h  orthManager.ui  outils.cpp  outils.h  puces.cpp  puces.h  puces.ui  qzip.cpp  qzipreader.h  (+16 more)
dicos/: an_ES.aff  en_CA.dic  en_GB.dic  en_US.dic  es_ANY.aff  es_ANY.dic  fr_BE.aff  fr_BE.dic  pt_PT.dic
hunspell/: Makefile  config.status  configure  libhunspell-1.3.la  libhunspell-1.3.so.0.0.0  libtool
hunspell/intl/: Makefile
hunspell/m4/: Makefile
hunspell/man/: Makefile
hunspell/man/hu/: Makefile
hunspell/po/: Makefile  Makefile.in
hunspell/src/: Makefile
hunspell/src/hunspell/: Makefile  hashmgr.cxx  libhunspell-1.3.la
hunspell/src/hunspell/.deps/: affentry.Plo  affixmgr.Plo  csutil.Plo  dictmgr.Plo  filemgr.Plo  hashmgr.Plo  hunspell.Plo  hunzip.Plo  phonet.Plo  replist.Plo  suggestmgr.Plo
hunspell/src/hunspell/.libs/: libhunspell-1.3.lai  libhunspell-1.3.so.0.0.0
hunspell/src/parsers/: Makefile  Makefile.in  testparser
hunspell/src/parsers/.deps/: firstparser.Po  htmlparser.Po  latexparser.Po  manparser.Po  testparser.Po  textparser.Po
hunspell/src/parsers/.libs/: testparser
hunspell/src/tools/: Makefile  analyze  chmorph  example  hunspell  hunzip  hzip  munch  unmunch
hunspell/src/tools/.deps/: analyze.Po  chmorph.Po  example.Po  hunspell.Po  hunzip.Po  hzip.Po  munch.Po  unmunch.Po
hunspell/src/tools/.libs/: analyze  chmorph  example  hunspell  hunzip
hunspell/src/win_api/: Makefile
hunspell/tests/: Makefile
hunspell/tests/suggestiontest/: Makefile
images/: .directory  chargement.xcf
quazip/: Makefile  libquazip.so.1.0.0
quazip/.moc/: moc_quazipfile.cpp
widgets/: spellCheckerWidget.cpp  spellCheckerWidget.h  spellCheckerWidget.ui
zlib-1.2.7/: compress.lo  crc32.lo  deflate.lo  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.7  trees.lo  uncompr.lo  zutil.lo
